Fixed team image heights on mobile

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -6,7 +6,7 @@
 .teamPicture {
     border-radius: 10rem;
     margin-bottom: 2rem;
-    height: 15rem
+    max-height: 15rem;
 }
 
 .gradientBackground {
